--- a/test_html.html
+++ b/test_html.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Impressive Login Page</title>
+  <title>ataf login page</title>
   <style>
     /* Background styling */
     body {
